<resources>
    <string name="app_name">Ressuscitou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_settings">Configurações</string>

    <string name="title_stage">Étapa</string>
    <string name="menu_pre">Pré-Catecumenato</string>
    <string name="menu_liturgic">Cânticos litúrgicos</string>
    <string name="menu_way">Catecumenato</string>
    <string name="menu_eleition">Eleição</string>

    <string name="title_liturgic_time">Tempo litúrgico</string>
    <string name="menu_all">Ver todos (A-Z)</string>
    <string name="menu_advent">Advento</string>
    <string name="menu_christmans">Natal</string>
    <string name="menu_lent">Quaresma</string>
    <string name="menu_easter">Páscoa</string>
    <string name="menu_pentecost">Pentencostes</string>

    <string name="title_eucharist">Eucaristia</string>
    <string name="menu_input">Entrada</string>
    <string name="menu_peace">Paz</string>
    <string name="menu_fraction">Fração do pão</string>
    <string name="menu_communion">Comunhão</string>
    <string name="menu_final">Final</string>


</resources>
